--- a/content/fr/_index.html
+++ b/content/fr/_index.html
@@ -122,10 +122,10 @@ contents:
       options:
         categories: true
         dates: true
-        image: true
+        image: false
         subtitle: true
         summary: true
-        status: false
+        status: true
 
       layout: large
       description: >-
