--- a/content/fr/_index.html
+++ b/content/fr/_index.html
@@ -122,10 +122,10 @@ contents:
       options:
         categories: true
         dates: true
-        image: false
+        image: true
         subtitle: true
         summary: true
-        status: true
+        status: false
 
       layout: large
       description: >-
