--- a/content/fr/_index.html
+++ b/content/fr/_index.html
@@ -125,7 +125,7 @@ contents:
         image: true
         subtitle: true
         summary: true
-        status: true
+        status: false
 
       layout: large
       description: >-
